--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         justify-content: center;
         height: 22px;
         font-size: var(--small-font-size);
-        padding: 2px 5px;
+        padding: 2px 8px 2px 5px;
         text-align: center;
         background: var(--input-bg);
         color: var(--primary-text);
@@ -475,7 +475,7 @@
         justify-content: center;
         height: 22px;
         font-size: var(--small-font-size);
-        padding: 2px 5px;
+        padding: 2px 8px 2px 5px;
         text-align: center;
         background: var(--input-bg);
         color: var(--primary-text);
@@ -557,6 +557,15 @@
         margin-top: 5px;
         text-align: left;
         width: 100%;
+    }
+
+    /* Styl dla ikony kalendarza w polu "Data rozpoczęcia" */
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        filter: none;
+    }
+
+    .dark-mode input[type="date"]::-webkit-calendar-picker-indicator {
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
     }
 
     .result-container, .form-container, .harmonogram-container {
@@ -1361,7 +1370,7 @@
                 { text: `Kwota lokaty: ${parseFloat(elements.kwota.value).toFixed(2)} zł` },
                 { text: `Odsetki brutto: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.odsetkiBrutto), 0).toFixed(2)} zł` },
                 { text: `Podatek: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.podatek), 0).toFixed(2)} zł` },
-                                { text: `Odsetki netto: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.zyskNetto), 0).toFixed(2)} zł` },
+                { text: `Odsetki netto: ${state.harmonogramData.reduce((sum, row) => sum + parseFloat(row.zyskNetto), 0).toFixed(2)} zł` },
                 { text: `Całkowita kwota po zakończeniu: ${state.harmonogramData[state.harmonogramData.length - 1].sumaNetto} zł` },
                 { text: `Data zakończenia: ${dataZakonczenia.toLocaleDateString('pl-PL')}` },
                 { text: '\nHarmonogram odsetek:', style: 'subheader' },
