--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@
         min-width: 0;
         max-width: none;
         flex: none;
+        align-items: flex-start;
     }
 
     .variable-input-group .form-group .form-label {
@@ -643,9 +644,9 @@
 
     .variable-input-group .input-group {
         display: flex;
-        align-items: center;
         max-width: 150px;
         width: 150px;
+        align-items: flex-start;
     }
 
     .variable-input-group .btn-danger {
@@ -808,6 +809,8 @@
 
         .form-group:has(#dlugoscUmowy) .select-display {
             width: 80px;
+            height: 26px;
+            line-height: 20px;
         }
 
         .form-group:has(#kapitalizacja) .select-wrapper {
@@ -817,6 +820,8 @@
 
         .form-group:has(#kapitalizacja) .select-display {
             width: 200px;
+            height: 26px;
+            line-height: 20px;
         }
 
         input[type="range"].form-range {
