--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         display: flex;
         max-width: 150px;
         width: 150px;
-        align-items: flex-start;
+        justify-content: flex-start;
     }
 
     .variable-input-group .btn-danger {
