--- a/index.html
+++ b/index.html
@@ -620,22 +620,25 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
-        align-items: center;
+        align-items: flex-start;
+        width: 100%;
     }
 
     .variable-inputs-wrapper {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         gap: 10px;
+        width: 100%;
     }
 
     .variable-input-group .form-group {
-        width: 150px;
+        width: 200px;
         min-width: 0;
         max-width: none;
         flex: none;
         align-items: flex-start;
+        margin: 0;
     }
 
     .variable-input-group .form-group .form-label {
@@ -644,8 +647,8 @@
 
     .variable-input-group .input-group {
         display: flex;
-        max-width: 150px;
-        width: 150px;
+        max-width: 200px;
+        width: 200px;
         justify-content: flex-start;
     }
 
@@ -774,7 +777,7 @@
     @media (max-width: 576px) {
         .form-row, .checkbox-row, .fields-wrapper, .variable-inputs-wrapper {
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
             gap: 6px;
         }
 
@@ -782,7 +785,8 @@
             width: 200px;
             max-width: 200px;
             min-width: 200px;
-            margin: 5px auto;
+            margin: 5px 0;
+            align-self: flex-start;
         }
 
         .form-control, .select-display {
@@ -826,6 +830,7 @@
 
         input[type="range"].form-range {
             width: 200px;
+            align-self: flex-start;
         }
 
         .harmonogram table {
@@ -838,6 +843,25 @@
 
         .chart-container-line {
             height: 200px;
+        }
+
+        .variable-input-group {
+            align-items: flex-start;
+            width: 100%;
+        }
+
+        .variable-inputs-wrapper {
+            align-items: flex-start;
+            width: 100%;
+        }
+
+        .variable-input-group .form-group {
+            margin: 5px 0;
+            align-self: flex-start;
+        }
+
+        .variable-input-group .input-group {
+            justify-content: flex-start;
         }
     }
 </style>
