--- a/index.html
+++ b/index.html
@@ -981,6 +981,16 @@
         .remove-first-btn-wrapper {
             justify-content: center;
         }
+
+        /* Przesunięcie logo na lewo w widoku 576px i mniejszym (w tym 480px) */
+        .logo-container {
+            justify-content: flex-start;
+        }
+
+        .logo, #siteLogo {
+            margin-left: 0;
+            margin-right: 0;
+        }
     }
 </style>
 <script>
