--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota lokaty</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="kwota" min="100" max="10000000" step="100" value="10000">
+                                    <input type="number" class="form-control" id="kwota" min="1" max="10000000" value="10000">
                                     <span class="input-group-text">zł</span>
                                 </div>
-                                <input type="range" class="form-range" id="kwotaRange" min="100" max="10000000" step="100" value="10000">
+                                <input type="range" class="form-range" id="kwotaRange" min="1" max="10000000" value="10000">
                             </div>
                             <div class="form-group">
                                 <label for="dlugoscUmowy" class="form-label">Długość umowy</label>
