--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
             </div>
         </div>
         <div class="result-section" id="resultSection" style="display: none;">
-            <button id="generatePdfBtn" class="btn btn-primary btn-sm" aria-label="Generuj PDF z wynikami">Generuj PDF</button>
             <div class="result-header">
-                <h4 id="resultHeader">Podsumowanie wyników</h4>
+                <h4 id="resultHeader">Podsumowanie wyników lokaty</h4>
+                <button id="generatePdfBtn" class="btn btn-primary btn-sm" aria-label="Generuj PDF z wynikami">Generuj PDF</button>
             </div>
             <button class="btn btn-secondary mb-3" onclick="showForm()" aria-label="Powrót do edycji formularza">Powrót do edycji</button>
             <div class="result-container">
                 <div class="result-wrapper-chart">
                     <div class="summary-bars">
-                        <!-- Dane będą generowane dynamicznie przez JavaScript -->
                     </div>
                 </div>
             </div>
@@ -281,10 +280,10 @@
 
     .header-row, .result-header {
         display: flex;
-        justify-content: space-between; /* Zmiana na space-between dla przycisku PDF */
+        justify-content: space-between;
         align-items: center;
         margin-bottom: 15px;
-        position: relative;
+        position: 100%;
     }
 
     .header-row h4, .result-header h4 {
@@ -295,8 +294,12 @@
         margin: 0;
     }
 
+    #resultHeader {
+        margin: 0;
+    }
+
     #generatePdfBtn {
-        margin: 0; /* Usunięcie domyślnego marginesu */
+        margin-left: auto; 
     }
 
     .checkbox-label {
@@ -744,7 +747,7 @@
         cursor: pointer;
         transition: color 0.3s ease;
         width: 80%;
-        max-width: 600px;
+        max-width: 900px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -771,7 +774,7 @@
         transform: translate(-50%, -50%);
         color: white;
         font-weight: bold;
-        font-size: 0.9em;
+        font-size: 1.1em;
         z-index: 1;
     }
 
@@ -786,6 +789,7 @@
         border-radius: var(--border-radius);
         box-shadow: 0 2px 4px var(--shadow-color);
         width: 100%;
+        margin-top: 30px;
     }
 
     .harmonogram {
